Modify color of Washington DC

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 								/>
 								<g id="DC">
 									<path id="path58" fill="#D3D3D3" d="M975.8,353.8l-1.1-1.6l-1-0.8l1.1-1.6l2.2,1.5L975.8,353.8z" />
-									<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#FDAE6B" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
+									<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#244999" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
 									cy="351.8" r="5" />
 								</g>
 							</g>
@@ -259,7 +259,7 @@
 								/>
 								<g id="DC">
 									<path id="path58" fill="#D3D3D3" d="M975.8,353.8l-1.1-1.6l-1-0.8l1.1-1.6l2.2,1.5L975.8,353.8z" />
-									<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#FDAE6B" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
+									<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#244999" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
 									cy="351.8" r="5" />
 								</g>
 							</g>
@@ -381,7 +381,7 @@
 									/>
 									<g id="DC">
 										<path id="path58" fill="#D3D3D3" d="M975.8,353.8l-1.1-1.6l-1-0.8l1.1-1.6l2.2,1.5L975.8,353.8z" />
-										<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#FDAE6B" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
+										<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#244999" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
 										cy="351.8" r="5" />
 									</g>
 							</g>
@@ -503,7 +503,7 @@
 									/>
 									<g id="DC">
 										<path id="path58" fill="#D3D3D3" d="M975.8,353.8l-1.1-1.6l-1-0.8l1.1-1.6l2.2,1.5L975.8,353.8z" />
-										<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#FDAE6B" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
+										<circle id="circle60" data-info="<div>Washington DC</div><div>2016 Data: D</div>" fill="#244999" stroke="#FFFFFF" stroke-width="1.5" cx="975.3"
 										cy="351.8" r="5" />
 									</g>
 							</g>
