Added few signs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 					<link rel="stylesheet" href="index.css">
+					<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+					integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+					crossorigin="anonymous">
 	</head>
 	
 	<body>
@@ -512,7 +515,11 @@
 				</div>
 				
 				<div class="col-sm-3 sidenav">
-					<h3>Graphs</h3>
+					<ul class="legend">
+						<li><span class="republican"></span>&nbsp;Republican</li>
+						<li><span class="democratic"></span>&nbsp;Democratic</li>
+					</ul>
+					<h3><i class="far fa-calendar-alt"></i>&nbsp;Graphs</h3>
 					<ul class="nav nav-pills nav-stacked">
 						<li id="2016" class="active">
 							<a href="#">2016 Election</a>
