Added candidate info

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="col-sm-9">
 					<div id="headerline">
 						<h2>U.S. Presidential Election Data Map</h2>
-						<h4 id="description">-----Description for 2016-----</h4>
+						<h4 id="description">----- Description for 2016 -----</h4>
 					</div>
 					<link rel="stylesheet" type="text/css" href="index.css" />
 					<div id="info-box"></div>
@@ -515,12 +515,8 @@
 				</div>
 				
 				<div class="col-sm-3 sidenav">
-					<ul class="legend">
-						<li><span class="republican"></span>&nbsp;Republican</li>
-						<li><span class="democratic"></span>&nbsp;Democratic</li>
-					</ul>
 					<h3><i class="far fa-calendar-alt"></i>&nbsp;Graphs</h3>
-					<ul class="nav nav-pills nav-stacked">
+					<ul id="graph-map" class="nav nav-pills nav-stacked">
 						<li id="2016" class="active">
 							<a href="#">2016 Election</a>
 						</li>
@@ -535,6 +531,19 @@
 						</li>
 					</ul>
 					<br>
+					<h3><i class="fas fa-info-circle"></i>&nbsp;Candidate Info</h3>
+					<ul id="candidate">
+						<li id="republican-name">
+							<span class="republican">
+								<i class="fas fa-republican"></i>
+							</span>&nbsp;<h5 ></h5>
+						</li>
+						<li id="democratic-name">
+							<span class="democratic">
+								<i class="fas fa-democrat"></i>
+							</span>&nbsp;<h5></h5>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
