--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 				<div class="col-sm-3 sidenav">
 					<h3><i class="far fa-calendar-alt"></i>&nbsp;Graphs</h3>
 					<ul id="graph-map" class="nav nav-pills nav-stacked">
-						<li id="2016" class="active">
+						<li id="2016">
 							<a href="#">2016 Election</a>
 						</li>
 						<li id="2012">
@@ -536,12 +536,12 @@
 						<li id="republican-name">
 							<span class="republican">
 								<i class="fas fa-republican"></i>
-							</span>&nbsp;<h5>Donald J. Trump&nbsp;&#10004;</h5>
+							</span>&nbsp;<h5></h5>
 						</li>
 						<li id="democratic-name">
 							<span class="democratic">
 								<i class="fas fa-democrat"></i>
-							</span>&nbsp;<h5>Hillary R. Clinton</h5>
+							</span>&nbsp;<h5></h5>
 						</li>
 					</ul>
 				</div>
